# tinyloom

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo.tape  pyproject.toml  tinyloom.example.yaml  todo.txt
.claude/: settings.json  statusline.sh
.github/workflows/: publish.yml
docs/: ADDITIONAL.md  PRE_RESEARCH_PLAN.md  PROMPT_SPEC.md  RESEARCH.md  creating-plugins.md  custom-hooks.md  custom-providers.md  design-decisions.md  exa-plugin.md  getting-started.md  hook-scripts.md  local-model.md  mask-plugin.md  mcp-plugin.md  sandbox-docker.md  sandbox-kata.md  sandbox-msb.md  sandbox-podman.md  sandbox-sbx.md  sandbox.md
docs/superpowers/plans/: 2026-04-15-tinyloom-implementation.md
docs/superpowers/specs/: 2026-04-15-tinyloom-design.md
tests/: test_agent.py  test_cli.py  test_compact.py  test_config.py  test_hooks.py  test_plugins.py  test_providers.py  test_providers_sync.py  test_tools.py  test_tui.py  test_types.py
tinyloom/: __init__.py  __main__.py  cli.py  tui.py
tinyloom/core/: agent.py  compact.py  config.py  hooks.py  tools.py  types.py
tinyloom/plugins/: __init__.py  exa_search.py  hook_scripts.py  mask.py  mcp.py  subagent.py  todo.py
tinyloom/providers/: __init__.py  anthropic.py  base.py  openai.py
